# aeo-sdk-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ORIGIN.md
src/: client.rs  document.rs  error.rs  lib.rs
tests/: document.rs
